--- a/requirements.txt
+++ b/requirements.txt
@@ -3,24 +3,42 @@ asgiref==3.5.2
 async-timeout==4.0.2
 billiard==3.6.4.0
 celery==5.2.7
+certifi==2022.9.24
+charset-normalizer==2.1.1
 click==8.1.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
+coreapi==2.3.3
+coreschema==0.0.4
 Deprecated==1.2.13
 Django==4.1.3
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
+drf-yasg==1.21.4
+idna==3.4
+inflection==0.5.1
+itypes==1.2.0
+Jinja2==3.1.2
 kombu==5.2.4
+MarkupSafe==2.1.1
+openapi-codec==1.3.2
 packaging==21.3
 prompt-toolkit==3.0.32
 PyJWT==2.6.0
 pyparsing==3.0.9
 python-dotenv==0.21.0
 pytz==2022.6
+PyYAML==6.0
 redis==4.3.4
+requests==2.28.1
+ruamel.yaml==0.17.21
+ruamel.yaml.clib==0.2.7
+simplejson==3.18.0
 six==1.16.0
 sqlparse==0.4.3
+uritemplate==4.1.1
+urllib3==1.26.12
 vine==5.0.0
 wcwidth==0.2.5
 wrapt==1.14.1
